# pipelineguard

./: .gitignore  Dockerfile  README.md  STRUCTURE.md  docker-compose.yml  pyproject.toml
src/pipelineguard/: __init__.py  cli.py  drift.py  models.py  report.py  validator.py  web.py
src/pipelineguard/ui/: index.html
tests/: test_drift.py  test_validator.py  test_web.py
